<resources>
    <string name="app_name">Calculator</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multi" />
    <string name="multiply">*</string>
    <string name="zero">0</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="divide">/</string>
    <string name="equal">=</string>
    <string name="clear">CLEAR</string>
    <string name="facto">FACTO!</string>
    <string name="sqrt">SQRT</string>
    <string name="cancel">C</string>
    <string name="todo">TODO</string>
    <string name="invalid">INVALID</string>
    <string name="wrong">INVALID</string>
    <string name="divide_by_zero">divide by zero</string>
</resources>