<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/one"
        android:layout_width="65dp"
        android:layout_height="75dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_weight="0"
        android:text="@string/one"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input" />

    <Button
        android:id="@+id/two"
        android:layout_width="65dp"
        android:layout_height="75dp"
        android:layout_marginStart="9dp"
        android:layout_weight="0"
        android:text="@string/two"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/one"
        app:layout_constraintStart_toEndOf="@+id/one" />

    <Button
        android:id="@+id/three"
        android:layout_width="65dp"
        android:layout_height="75dp"
        android:layout_marginStart="9dp"
        android:layout_weight="0"
        android:text="@string/three"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/two"
        app:layout_constraintStart_toEndOf="@+id/two" />

    <Button
        android:id="@+id/four"
        android:layout_width="65dp"
        android:layout_height="75dp"
        android:layout_marginTop="8dp"
        android:layout_weight="0"
        android:text="@string/four"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/one"
        app:layout_constraintTop_toBottomOf="@+id/one" />

    <Button
        android:id="@+id/five"
        android:layout_width="65dp"
        android:layout_height="75dp"
        android:layout_weight="0"
        android:text="@string/five"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/four"
        app:layout_constraintStart_toStartOf="@+id/two" />

    <Button
        android:id="@+id/six"
        android:layout_width="65dp"
        android:layout_height="75dp"
        android:layout_weight="0"
        android:text="@string/six"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/five"
        app:layout_constraintStart_toStartOf="@+id/three" />

    <Button
        android:id="@+id/seven"
        android:layout_width="65dp"
        android:layout_height="75dp"
        android:layout_marginTop="8dp"
        android:layout_weight="0"
        android:text="@string/seven"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/four"
        app:layout_constraintTop_toBottomOf="@+id/four" />

    <Button
        android:id="@+id/eight"
        android:layout_width="65dp"
        android:layout_height="75dp"
        android:layout_weight="0"
        android:text="@string/eight"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/seven"
        app:layout_constraintStart_toStartOf="@+id/five" />

    <Button
        android:id="@+id/nine"
        android:layout_width="65dp"
        android:layout_height="75dp"
        android:layout_weight="0"
        android:text="@string/nine"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/eight"
        app:layout_constraintStart_toStartOf="@+id/six" />

    <Button
        android:id="@+id/milti"
        android:layout_width="65dp"
        android:layout_height="75dp"
        android:layout_weight="0"
        android:text="@string/multiply"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/zero"
        app:layout_constraintStart_toStartOf="@+id/nine" />

    <Button
        android:id="@+id/zero"
        android:layout_width="65dp"
        android:layout_height="75dp"
        android:layout_weight="0"
        android:text="@string/zero"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/subtraction"
        app:layout_constraintStart_toStartOf="@+id/eight" />

    <Button
        android:id="@+id/addition"
        android:layout_width="65dp"
        android:layout_height="75dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="0"
        android:text="@string/add"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/subtraction"
        app:layout_constraintTop_toBottomOf="@+id/subtraction"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/subtraction"
        android:layout_width="65dp"
        android:layout_height="75dp"
        android:layout_marginTop="8dp"
        android:layout_weight="0"
        android:text="@string/sub"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/seven"
        app:layout_constraintTop_toBottomOf="@+id/seven" />

    <Button
        android:id="@+id/divide"
        android:layout_width="65dp"
        android:layout_height="75dp"
        android:layout_weight="0"
        android:text="@string/divide"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/addition"
        app:layout_constraintStart_toStartOf="@+id/zero" />

    <Button
        android:id="@+id/equalTo"
        android:layout_width="65dp"
        android:layout_height="75dp"
        android:layout_weight="0"
        android:text="@string/equal"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/divide"
        app:layout_constraintStart_toStartOf="@+id/milti" />

    <Button
        android:id="@+id/clearing"
        android:layout_width="94dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:text="@string/clear"

        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/three" />

    <Button
        android:id="@+id/factorial"
        android:layout_width="94dp"
        android:layout_height="75dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="8dp"
        android:text="@string/facto"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/clearing"
        app:layout_constraintTop_toBottomOf="@+id/clearing" />

    <Button
        android:id="@+id/square"
        android:layout_width="94dp"
        android:layout_height="75dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="8dp"
        android:text="@string/sqrt"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/factorial"
        app:layout_constraintTop_toBottomOf="@+id/factorial" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="193dp"
        android:layout_height="101dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/calculator" />

    <TextView
        android:id="@+id/input"
        android:layout_width="270dp"
        android:layout_height="57dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/text_border"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/chancel"
        android:layout_width="94dp"
        android:layout_height="75dp"

        android:layout_marginTop="35dp"
        android:layout_marginEnd="8dp"
        android:text="@string/cancel"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/square"
        app:layout_constraintTop_toBottomOf="@+id/square" />

</androidx.constraintlayout.widget.ConstraintLayout>










